--- a/pom.xml
+++ b/pom.xml
@@ -29,4 +29,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>ip-172-31-30-135-snapshots</name>
+        <url>http://ec2-54-160-240-208.compute-1.amazonaws.com:8081/artifactory/libs-snapshot</url>
+    </snapshotRepository>
+      <repository>
+        <id>central</id>
+        <name>ip-172-31-30-135-releases</name>
+        <url>http://ec2-54-160-240-208.compute-1.amazonaws.com:8081/artifactory/libs-release</url>
+    </repository>
+</distributionManagement>
 </project>
